--- a/GESTION-CURSOS/src/main/resources/application.properties
+++ b/GESTION-CURSOS/src/main/resources/application.properties
@@ -2,3 +2,6 @@ server.port=5000
 
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.security.user.name=admin
+spring.security.user.password=qwerty
