--- a/GESTION-CURSOS/src/main/resources/application.properties
+++ b/GESTION-CURSOS/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.port=5000
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.security.user.name=admin
-spring.security.user.password=qwerty
+#spring.security.user.name=admin
+#spring.security.user.password=qwerty
